k8s/overlays/dev/patch-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: LoadBalancer
