k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: REPLACE_ACM_CERT_ARN_DEV
spec:
  rules:
    - host: dev.REPLACE_DOMAIN
  tls:
    - hosts:
        - dev.REPLACE_DOMAIN
      secretName: tls-placeholder
